--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: eclaircy's blog # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Learning security issues consistently # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -29,12 +29,12 @@ github:
   username: eclaircy # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: eclaircy # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: eclaircy
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
